fixes overflowing problem when last element is an image

--- a/assets/less/post.less
+++ b/assets/less/post.less
@@ -1,4 +1,6 @@
 article.post {
+  overflow: hidden;
+
   h1 {
     margin-top: 0.4em;
     word-wrap: break-word;
